src/css/style.css
/* Global Variables */
:root {
  --bg-color: black;
  --primary-color: white;
  --content-width: 100%;
  --content-bg-color: rgb(60, 64, 67);
  --navlink-margin: 50px;
}

/* Universal box sizing with inheritance. */
html {
  font-family: Calibri;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  max-width: var(--content-width);
  margin: auto;
  /* font-family: Arial, Helvetica, sans-serif; */
  color: var(--primary-color);
  background-color: var(--bg-color);
}

header {
  width: var(--content-width);
  z-index: 1;
}

/* Contains the brand and navbar */
.nav-container {
  display: inline-flex;
  flex-flow: row nowrap;
  background-color: var(--content-bg-color);
  width: inherit;
  align-items: top;
  position: fixed;
  top: 0;
  padding-left: 7px;
}

.brand {
  font-size: 24px;
  font-weight: 900;
  text-transform: uppercase;
  color: var(--primary-color);
  text-decoration: none;
}

.navbar {
  /* Flexbox configurations */
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-end;
  justify-content: center;
  width: 100%;
  padding: 0;
}

/* Contains the menu button and navlinks */
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.navbar-menu-list {
  display: none;
}

.menu-list-toggle {
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-end;
}

.menu-list-toggle .navbar-menu-list {
  display: flex;
  flex-direction: inherit;
}

.navbar-menu-button {
  display: flex;
  flex-flow: row nowrap;
  background-color: var(--primary-color);
  cursor: pointer;
  border-radius: 5px;
  margin-right: 10px;
  width: 35px;
}

.menu-button-icon {
  width: 20px;
}

.menu-button-icon div {
  height: 3px;
  background-color: var(--bg-color);
  margin: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 5px;
  transition: 0.4s;
}

.menu-btn-animate .icon-bar1 {
  -webkit-transform: rotate(-45deg) translate(-6px, 4px);
  transform: rotate (-45deg) translate(-6px, 4px);
}

.menu-btn-animate .icon-bar2 {
  opacity: 0;
}

.menu-btn-animate .icon-bar3 {
  --translate-x: -5px;
  --translate-y: -5px;
  -webkit-transform: rotate(45deg)
    translate(var(--translate-x), var(--translate-y));
  transform: rotate(45deg) translate(var(--translate-x), var(--translate-y));
}

.navbar-menu-list {
  margin-right: 10px;
}

.navbar-menu-list a {
  /* Needed for link animation */
  position: relative;
  color: var(--primary-color);
  text-decoration: none;
  margin: 2px 0px 0px var(--navlink-margin);
}

.navlink a::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: gold;
  width: 100%;
  visibility: visible;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.navlink a:hover::before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.overlay {
  height: 50px;
}

.section-container {
  margin-left: 10px;
  margin-right: 10px;
}

.section-container h1 {
  font-size: 50px;
  text-align: center;
}

.owl-item {
  border: solid white;
}

.owl-dots {
  border: solid red;
  text-align: center;
}

.owl-dot span {
  display: block;
  /* background: none repeat scroll 0 0 #869791 ; */
  background-color: white;
  height: 12px;
  width: 12px;
  margin: 5px 7px;
  border-radius: 20px;
  border: solid black;
}

.active span {
  background-color: gold;
}

.resume-container {
  display: grid;
  width: 100%;
  color: var(--primary-color);
  grid-template-columns: 1fr;
  row-gap: 50px;
}

.resume-container a {
  color: rgb(51, 145, 255);
}

.resume-container .download-wrapper {
  grid-column: span 1;
  justify-self: center;
}

.resume-container .download {
  display: inline-block;
  background-color: gold;
  color: black;
  font-size: 20px;
  text-decoration: none;
  text-align: center;
  border-radius: 50px;
  vertical-align: middle;
  line-height: 70px;
  width: 200px;
}

.resume-container .resume-item {
  grid-column: span 1;
  background-color: rgb(26, 26, 26);
  border-radius: 10px;
  padding: 15px;
}

.resume-item > .date {
  font-size: 25px;
  color: gold;
  font-weight: bold;
}

.resume-item > .company-position {
  font-size: 15px;
  font-weight: 600;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: hsl(0, 0%, 50%);
}

.resume-item > .desc {
  padding-left: 15px;
  list-style-type: initial;
}

.contact-container {
  display: grid;
}

.contact-container .message {
  margin: 0 0 30px 0;
  justify-self: center;
  color: hsl(0, 0%, 50%);
}

.contact-container form {
  display: grid;
  width: 80%;
  row-gap: 8px;
  justify-self: center;
}

.contact-container form > input {
  grid-column: span 3;
  font-family: Calibri;
}

.contact-container form > textarea {
  grid-column: span 3;
  resize: none;
  height: 100px;
  font-family: Calibri;
}

input#contact-form-msg {
  height: 100px;
}

.contact-container button {
  grid-column: span 3;
  justify-self: center;
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .navbar-menu-button {
    display: none;
  }

  .navbar-menu-list {
    display: flex;
  }

  .resume-container {
    grid-template-columns: repeat(2, 1fr);
    column-gap: 30px;
  }

  .resume-container h1 {
    grid-column: span 2;
  }

  .resume-container .download-wrapper {
    grid-column: span 2;
  }
  .contact-container form {
    width: 70%;
  }

  .contact-container .required-field {
    grid-column: span 3;
    color: red;
    justify-self: center;
    margin: 0;
    font-size: smaller;
  }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  :root {
    --content-width: 1200px;
  }
}

